DockerExamplePython/python-config.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-python-deploy
  namespace: soumya-399001
spec:
  selector:
    matchLabels:
      app: ingress-python-app
  replicas: 1
  template:
    metadata:
      labels:
        app: ingress-python-app
    spec:
      containers:
      - name: pythoncont
        image: soumya06in/python:1.0.0
        imagePullPolicy: IfNotPresent
		resources:
            limits:
              memory: 1Gi
              cpu: "0.5"
            requests:
              memory: 256Mi
              cpu: 250m
        ports:
        - containerPort: 5000
          protocol: TCP


---

apiVersion: v1
kind: Service
metadata:
  name: ingress-python-service
spec:
  type: ClusterIP
  ports:
  - port: 5000
  selector:
    app: ingress-python-app
