DockerExamplePython/controller-helloworld-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: controller-helloworld-ingress
  namespace: soumya-399001
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /soumya/helloworld(/|$)(.*)
            backend:
              serviceName: ingress-python-service
              servicePort: 5000
